# java-native-play

./: .gitignore  build.gradle  settings.gradle
cpp/: .gitignore  CMakeLists.txt  main.cpp
cpp/face-processing/: CMakeLists.txt
cpp/face-processing/include/face/: detect.hpp
cpp/face-processing/src/: detect.cpp
cpp/face-processing/test/: CMakeLists.txt  detectFaceTest.cpp  test_vars.h  test_vars.h.in
cpp/src/: detector.cpp  service.cpp
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  example.cpp  example.hpp  runner.cpp
protobuf/: CMakeLists.txt
protobuf/src/main/java/com/fullcontact/nplay/model/: TestMessage.java
protobuf/src/main/java/com/fullcontact/nplay/service/: FaceDetectionGrpc.java  NativeService.java  PrinterGrpc.java
protobuf/src/main/proto/: native-service.proto  test.proto
rpc/src/main/java/: FaceDetectGrpcClient.java  HelloGRPC.java  HelloGRPCClient.java  HelloGRPCLoadClient.java  HelloGRPCServer.java  PrinterServer.java  PrinterService.java
src/main/java/: HelloWorldJNA.java
